# chitychat

./: .gitignore  CMakeLists.txt  README.md  meson.build
client/headless/: bot.py  bot_api.py  bot_v1.py
client/public/: index.html  index.js
client/public/app/: app.js  group.js  handle_packet.js  index.html  server.js  styles.css  user.js
client/public/login/: chatgpt.html  index.html  login.js  style.css
server/: config.json
server/include/: common.h  server.h  server_client.h  server_client_sesson.h  server_crypt.h  server_db.h  server_evcb.h  server_events.h  server_eworker.h  server_file.h  server_group.h  server_ht.h  server_http.h  server_init.h  server_log.h  server_net.h  server_signal.h  server_timer.h  server_tm.h  server_upload_token.h  server_user_account.h  server_user_file.h  server_user_group.h  server_user_login.h  server_user_req.h  server_util.h  server_websocket.h  server_ws_pld_hdlr.h
server/include/chat/: cmd.h  db.h  db_def.h  db_group.h  db_pipeline.h  db_user.h  db_userfile.h  group.h  rtusm.h  upload_token.h  user.h  user_account.h  user_file.h  user_login.h  user_req.h  user_session.h  user_upload.h  ws_text_frame.h
server/sql/: README.md  create_group_code.sql  delete_group_code.sql  delete_msg.sql  get_group_codes.sql  insert_group.sql  insert_groupmember.sql  insert_groupmember_code.sql  insert_msg.sql  insert_user.sql  insert_userfiles.sql  join_pub_group.sql  schema.sql  select_connected_users.sql  select_group.sql  select_group_msgs_json.sql  select_groupmember.sql  select_msg.sql  select_public_group.sql  select_user.sql  select_user_groups.sql  select_user_json.sql  update_user.sql
server/src/: convert_db.py  main.c  server.c  server_client.c  server_client_session.c  server_crypt.c  server_db.c  server_evcb.c  server_events.c  server_eworker.c  server_file.c  server_group.c  server_ht.c  server_http.c  server_http_get.c  server_http_post.c  server_init.c  server_log.c  server_signal.c  server_timer.c  server_tm.c  server_upload_token.c  server_user_account.c  server_user_file.c  server_user_group.c  server_user_login.c  server_user_req.c  server_util.c  server_websocket.c  server_ws_pld_hdlr.c
server/src/chat/: cmd.c  db.c  db_group.c  db_pipeline.c  db_user.c  db_userfile.c  group.c  rtusm.c  upload_token.c  user.c  user_account.c  user_file.c  user_login.c  user_req.c  user_session.c  user_upload.c  ws_text_frame.c
tests/: bots.sh  dc_af_req.py  delete_group.py  delete_msg.py  get_users.py  load_balance_bots.sh  login.py  register.py  user_groups.py
